# habraposts

./: .gitignore  Pipfile  cli.py  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_auto_20200721_1116.py  0003_auto_20211102_0143.py  0004_auto_20211102_0159.py  0005_alter_article_options_alter_authortag_options_and_more.py
frontend/: context_processors.py  views.py
frontend/static/frontend/: style.css
frontend/templates/frontend/: base.html  delete.html  index.html  paginator.html
habrakeeper/: asgi.py  settings.py  urls.py  wsgi.py
habraparser/: __init__.py  parser.py
