[tool.poetry]
name = "habraposts"
version = "0.1.0"
description = ""
authors = ["freetz13 <alexander.astafiev.1989@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.27.1"
Django = "^4.0.1"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]
ipython = "^7.31.0"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
